--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,19 @@ body {
 
 /* ========================================================
   ==========================================================
+              CSS ROOT
+  ==========================================================
+  ==========================================================
+ */
+:root {
+  --grad-1: linear-gradient(145deg, #faf9c5 40%, #e8f9ff 90%);
+  --grad-2: linear-gradient(35deg, #faf9c5 40%, #e8f9ff 90%);
+  --grad-3: linear-gradient(35deg, #fcfce2 40%, #f5fbfe 90%);
+  --grad-4: linear-gradient(145deg, #f3fcff 40%, #d3fff5 90%);
+  --grad-5: linear-gradient(to top right, #f29727, #ffb527);
+}
+/* ========================================================
+  ==========================================================
               Material UI Theme  
   ==========================================================
   ==========================================================
@@ -121,4 +134,43 @@ body {
   place-content: center;
   border-radius: 30px;
   padding: 0px 30px;
+}
+.about--container {
+  width: 100%;
+  height: 130vh;
+  padding: 80px 200px;
+  overflow: hidden;
+  background: url("./assets/images/Bg\ illustration.svg") !important;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+/* ======================================================================
+ ============================= LINE BG ========================
+  */
+.line--bg {
+  width: 100%;
+  padding: 80px 200px;
+  overflow: hidden;
+  background: url("./assets/images/Bg\ illustration.svg") !important;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+/* ========================================================
+=============================================================
+ABOUT STYLES
+===============================================================
+===================================================================
+===== */
+.gradient-bg {
+  width: 100%;
+  background: var(--grad-3);
+}
+.wancore--img {
+  height: 60vh;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
 }
