--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+a {
+  color: #555 !important;
+}
 html,
 body {
   scroll-behavior: smooth;
@@ -375,6 +378,19 @@ a {
 }
 
 @media screen and (max-width: 620px) {
+  .banner--caption h2 {
+    line-height: 50px !important;
+    width: 100%;
+    font-size: 45px !important;
+  }
+  .about--container {
+    width: 100%;
+    height: 130vh;
+    padding: 80px 10px;
+  }
+  .hidden--image {
+    width: 340px !important;
+  }
   .box-container {
     width: 100%;
   }
@@ -442,4 +458,30 @@ a {
   visibility: visible;
   opacity: 1;
   transform: translateY(0px);
+}
+/* ========================================================
+  ==========================================================
+              SWIPER JS STYLES
+  ==========================================================
+  ==========================================================
+ */
+.swiper-button-next,
+.swiper-button-prev {
+  background: var(--blue-10) !important;
+  width: 80px !important;
+  height: 80px !important;
+  border-radius: 50%;
+  color: #fff !important;
+}
+.swiper-pagination .swiper-pagination-bullet {
+  width: 12px !important;
+  height: 12px !important;
+  background-color: #fff !important;
+  transition: var(--ui-anim-func) !important;
+  opacity: 1 !important;
+}
+.swiper-pagination .swiper-pagination-bullet-active {
+  height: 25px !important;
+  border-radius: 10px !important;
+  background: var(--color-brand-facebook) !important;
 }
